# genealogy-system

./: .gitattributes  .gitignore  PERFORMANCE_ANALYSIS.md  README.md  server.py  前端实现介绍.md  族谱管理系统 API.openapi.json
backend/: .gitignore  CMakeLists.txt  export_backup.py  export_data.sh  import_data.sh  import_wsl.sh  main.cc  后端代码实现简介.md
backend/controllers/: AuthController.cc  AuthController.h  DashboardController.cc  DashboardController.h  GenealogyController.cc  GenealogyController.h  MemberController.cc  MemberController.h  RelationshipController.cc  RelationshipController.h  ResponseUtils.cc  ResponseUtils.h  ShareController.cc  ShareController.h  StatisticsController.cc  StatisticsController.h
backend/migrations/: generate_test_data.py  init_schema.sql  migration_fix_generations.sql  migration_phase3.sql  phase3_performance.sql.py
backend/models/: DbUtils.h  Genealogy.h  Marriage.h  Member.h  StatsCache.h  User.h  model.json
backend/test/: CMakeLists.txt
static/css/: style.css
static/js/: api.js  app.js  tree-renderer.js
templates/: index.html
